--- a/src/styles/_css-variables.scss
+++ b/src/styles/_css-variables.scss
@@ -60,6 +60,8 @@
   --z-search-bar: 999;
   --z-mobile-bottom-nav: 50;
   --z-right-panel: 44;
+  --z-right-panel-resize-handle: 65;
+  --z-right-panel-edge-handle: 66;
   --z-tour: 99;
 
   // ===============================
